# shared-input-peripheral

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.toml
scripts/: build.py
sharedinput/: __init__.py  __main__.py  config.py  discovery.py  icons.py  protocol.py  tray.py
sharedinput/client/: injector.py  main.py  network.py
sharedinput/platform/: __init__.py  macos.py  windows.py
sharedinput/server/: capture.py  main.py  network.py  switcher.py
tests/: test_protocol.py
